--- a/docs/src/components/Intro/Intro.module.css
+++ b/docs/src/components/Intro/Intro.module.css
@@ -18,12 +18,6 @@
   column-gap: 1rem;
 }
 
-@media screen and (max-width: 768px) {
-  .buttonList {
-    justify-content: center;
-  }
-}
-
 @media screen and (max-width: 480px) {
   .button {
     width: 100%;
